Fixed cell separators so they span the cell

--- a/EtsySearch/Base.lproj/Main.storyboard
+++ b/EtsySearch/Base.lproj/Main.storyboard
@@ -55,6 +55,7 @@
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
                                     <outlet property="listingImageView" destination="llS-xl-oeN" id="Wi1-E0-VtH"/>
                                     <outlet property="listingTitle" destination="pTi-8x-4vd" id="W2T-c7-CfK"/>
